<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">I.owe.U</string>
    <string name="action_settings">Settings</string>
    <string name="action_discard">Discard changes</string>
    <string name="action_make_even">Make even</string>
    <string name="action_delete">Delete</string>
    <string name="action_show_history">Show history</string>
    <string name="action_make_all_even">Make all even</string>
    <string name="action_delete_all_debts">Delete all debts</string>
    <string name="list_no_debts">No debts found!</string>

    <string name="list_lend">Lend</string>
    <string name="list_due">Due</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="debt_money">Money</string>
    <string name="debt_items">Items</string>
    <string name="borrowed">Borrowed</string>
    <string name="lend">Lend</string>

    <string name="debt_editor_ab_new_debt">Add new debt</string>
    <string name="debt_editor_ab_edit_debt">Edit debt</string>

    <string name="debt_editor_hint_borrower">Borrower</string>
    <string name="debt_editor_i_owe_them">I owe them</string>
    <string name="debt_editor_they_owe_me">They owe me</string>
    <string name="debt_editor_dates">Dates</string>
    <string name="debt_editor_create_date">Lend date</string>
    <string name="debt_editor_due_date">Due date</string>
    <string name="debt_editor_repaid_date">Repaid date</string>
    <string name="debt_editor_debt">Debt</string>
    <string name="debt_editor_what">What</string>
    <string name="debt_editor_amount">Amount</string>
    <string name="debt_editor_pieces">Pieces</string>
    <string name="debt_editor_description">Description</string>
    <string name="debt_editor_barcode">Barcode</string>
    <string name="debt_editor_tab_to_scan">Tap to scan</string>
    <string name="debt_editor_repaid">Repaid</string>

    <string name="amount_picker_title">Set amount</string>

    <string name="dialog_delete_debt">Do you want to delete this debt?</string>
    <string name="dialog_make_all_even">Make all debts even?</string>
    <string name="dialog_delete_all_debts">Delete all debts?</string>
    <plurals name="dialog_make_n_even">
        <item quantity="one">Make %d debt even?</item>
        <item quantity="other">Make %d debts even?</item>
    </plurals>
    <plurals name="dialog_delete_n_debts">
        <item quantity="one">Delete %d debt?</item>
        <item quantity="other">Delete %d debts?</item>
    </plurals>

    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="make_even">Make even</string>

    <string name="made_all_even">Made all debts even.</string>
    <string name="deleted_all_debts">Deleted all debts.</string>

    <string name="error_borrower_empty">Borrower must not be empty</string>
    <string name="error_amount_zero">Amount must not be zero</string>
    <string name="error_repaid_exceeds_amount">Repaid value exceeds amount</string>

    <string-array name="navigation_drawer_items">
        <item>Borrowers</item>
        <item>Settings</item>
    </string-array>

    <string-array name="debt_type">
        <item>Money</item>
        <item>Item</item>
    </string-array>

    <string-array name="debt_image_longlclick">
        <item>Take new picture</item>
        <item>Remove</item>
    </string-array>
</resources>
