<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true"
    android:clickable="true"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="4dp"
    card_view:contentPaddingLeft="16dp"
    card_view:contentPaddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_borrower"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_contact_picture"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="16dp">

            <TextView
                android:id="@+id/borrower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="hallo"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/debt_money"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="+5.00 €"
                    android:id="@+id/debt_money"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/borrowed"
                    android:id="@+id/textView"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="1"
                    android:id="@+id/debt_items_borrowed"
                    android:layout_weight="1"
                    android:paddingLeft="4dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lend"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="1"
                    android:id="@+id/debt_items_lend"
                    android:layout_weight="1"
                    android:paddingLeft="4dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
